--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -15,6 +15,8 @@
 \usepackage{pgfplots}
 \usepackage{siunitx}
 
+\def\checkmark{\tikz\fill[scale=0.4](0,.35) -- (.25,0) -- (1,.7) -- (.25,.15) -- cycle;}
+
 %%%%%%%% Bibliografi %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Ändrar namnet på referens headern
 \renewcommand\bibname{References}
@@ -177,13 +179,13 @@ As this project only aims for a working prototype of the system, it is very impo
 %\end{itemize}
 
 \section{Evaluation}
-In order to evaluate if all requirements have been met, the system will undergo a few tests. The first tests goal is to make sure that the user actually can choose a specific chart with specific optotypes. This is done by the developers going through all charts, with all types of optotypes.
+In order to evaluate if all requirements have been met, the system will undergo a few tests. The first tests goal is to make sure that the user actually can choose a specific chart with specific optotypes to be viewed from a specific distance. This is done by the developers going through all charts, with all types of optotypes and setting the distance for each one of them. To achieve this, table \ref{tab:test1_empty} is used to systematically walk through every setting.
 
 The second test is to make sure that the optotypes have the correct sizes on the monitor. This test will done by calculating, outside of the system, the expected size of the optotypes, in both pixels and centimeters. Once this is done, the calculated number of pixels will be compared to the number of pixels calculated by the system. If this is a match, the size of the optotypes on the screen will be measured with a physical measurement tool, like a ruler, and compared to the calculated amount of centimeters.
 
 The third test will determine how user friendly the system is. This will be done by letting a user with no previous knowledge of the system, attempt to connect to a server and perform some basic tasks like setting a specific chart with a specific optotype or setting a specific distance. If the user testing has no previous knowledge of visual acuity charts, a brief explanation will be given so that the test doesn't fail because the user, for example, doesn't know what "HVOT" is.
 
-The last test is a quantitative test to see how well the server detection performs. The test involves the Android application trying to detect a server on a stable WiFi a 100 times and see how many times the server was detected. This test can be done several times and the average number of detection's in a 100 tries will determine its success rate.
+The last test is a quantitative test to see how well the server detection performs. The test involves the Android application trying to detect a server on a stable WiFi a 100 times and see how many times the server was detected. This test can be done several times and the average number of detection's in a 100 tries will determine its success rate. In order for the server detection to be considered to have met the requirements, atleast 90\% of the attempts should have found the server.
 
 %\subsection{hur ska den utvärderas}
 %\begin{itemize}
@@ -374,7 +376,7 @@ Once an estimate visual acuity have been achieved from the one line chart, the u
 \chapter{Implementation}
 \section{Methods}
 \subsection{System structure}
-The system is divided into three major parts, an Android application, a server and networking. The Android application and server is modeled after the MVC (Model-View-Controller) pattern, where the model is the logic and the view is the GUI. The controller part is the part on the Android application that listens for button clicks and gestures. Usually the networking would fall under controller in the MVC pattern but was, in this system, chosen to be a separate larger structure. Figure \ref{system_structure} shows how the different parts are connected.
+The system is divided into three major parts, an Android application, a server and networking. The Android application and server is modeled after the MVC (Model-View-Controller) pattern, where the model is the logic and the view is the GUI (Graphical User Interface). The controller part is the part on the Android application that listens for button clicks and gestures. Usually the networking would fall under controller in the MVC pattern but was, in this system, chosen to be a separate larger structure. Figure \ref{system_structure} shows how the different parts are connected.
 
 \begin{figure}[ht!]
 \centering
@@ -383,7 +385,7 @@ The system is divided into three major parts, an Android application, a server a
 \end{figure}
 
 \subsection{Android application}
-The Android application is written in Java, which is the official language for Android. The static parts of the GUI (Graphical User Interface), which will never change unless application updates are released, are written in XML. This is similar to how HTML is written and is supported by Android natively.
+The Android application is written in Java, which is the official language for Android. The static parts of the GUI, which will never change unless application updates are released, are written in XML. This is similar to how HTML is written and is supported by Android natively.
 
 The charts shown on the Android device are generated at runtime. If the charts would have been written in XML, there would be no guarantee that they would fit on the screen or keep the correct proportions on tablets with different dimensions. It also avoids hard to read code as the large chart, for example, would need 70 defined areas for images, all with a unique text string id. The chart layouts are all drawn at the same time and in the same place, but sets the active chart visible and the rest invisible. As Android does not natively have support for vector graphics and the chart optotype images are vector images the AndroidSVG library is used to display them \cite{AndroidSVG}.
 
@@ -509,36 +511,79 @@ DISTANCE
 %The easiest way to see if our product satisfies these demands is putting it into the hands of the opticians at the university hospital and letting them test it, recording bug reports or comments. Testing will also let us determine if the system is as energy efficient as we intended.
 
 \chapter{Results}
-suggestions for sections
-\section{Result or some other title (might squish subsections into one)}
+\section{User Interface}
 \subsection{Android application}
+The finished Android application turned out as intended and uses Androids standard GUI elements. To navigate between the connection settings and different optotypes, Androids built in navigation drawer is used (fig. \ref{fig:app_nav_drawer}).
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=60mm]{images/appgui/nav_drawer.png}
+%\caption{Navigation drawer with, from top to bottom, the name of the application (\textit{Axanivis}), the currently connected server (\textit{Johansson-PC/192.168.0.12}), 4 different chart versions to choose between (\textit{ETDRS, Tumbling E, HVOT and Icons}). The \textit{Grating} setting is not yet implemented and \textit{Test} is used by the developers for testing new functions.}
+\caption{The Android application navigation drawer used for navigating the application. a) Name of the application b) The currently connected server c) Available optotypes d) Grating, not yet implemented e) Test, used for testing new functions}
+\label{fig:app_nav_drawer}
+\end{figure}
+
+
 
 \subsection{Server}
 \subsection{Network}
 
 \section{Test Results}
 \subsection{Developer walkthrough}
+During the developer walkthrough of the system, all charts versions where found and all settings where usable on every chart by using table \ref{tab:test1}. The connection settings where also reachable from everywhere in the application and both connecting and reconnecting was working properly.
+
+\begin{table}[ht!]
+\centering
+\begin{tabular}{l c c c r}
+Chart version		&	Large		&	Medium		&	Small		&	Distance	\\
+\hline\hline
+ETDRS 1				&	\checkmark	&	\checkmark	&	\checkmark	&	\checkmark	\\
+ETDRS 2				&	\checkmark	&	\checkmark	&	\checkmark	&	\checkmark	\\
+ETDRS R				&	\checkmark	&	\checkmark	&	\checkmark	&	\checkmark	\\
+ETDRS Random		&	\checkmark	&	\checkmark	&	\checkmark	&	\checkmark	\\
+\hline
+Tumbling E 1		&	\checkmark	&	\checkmark	&	\checkmark	&	\checkmark	\\
+Tumbling E Random	&	\checkmark	&	\checkmark	&	\checkmark	&	\checkmark	\\
+\hline
+HVOT 1				&	\checkmark	&	\checkmark	&	\checkmark	&	\checkmark	\\
+HVOT Random			&	\checkmark	&	\checkmark	&	\checkmark	&	\checkmark	\\
+\hline
+Icons 1				&	\checkmark	&	\checkmark	&	\checkmark	&	\checkmark	\\
+Icons Random		&	\checkmark	&	\checkmark	&	\checkmark	&	\checkmark	\\
+\hline\hline
+					&	Scanning	&	Connecting	& 	Reconnecting	& \\
+Connection			&	\checkmark	&	\checkmark	&	\checkmark	&	\\
+\hline\hline
+\end{tabular}
+\caption{Result of the developer walkthrough. \label{tab:test1}}
+\end{table}
+
 \subsection{Optotype Sizes}
-\subsection{User-friendliness}
+\subsection{Usability}
 \subsection{Server Detection}
-The server detection test was done 3 times on a stable WiFi network.
+The server detection test was done 3 times on a stable WiFi network. According to the results (Table. \ref{tab:server_detection_test}), every single one of the tests performed was successful in finding a server over 90\% of the time. The average success rate of the 3 tests was about 96.3\% which means that the server detection requirements are met.
 
 \begin{table}[ht!]
 \centering
 \begin{tabular}{l c r}
-Attempt	&	failures	&	succes \%	\\
+Attempt	&	failures	&	succeses	\\
 \hline
 1	&	7	&	93	\\
 2	&	1	&	99	\\
 3	&	3	&	97	\\
 \end{tabular}
-\caption{hejopp}
+\caption{The number of failures and successes during the server detection tests. \label{tab:server_detection_test}}
 \end{table}
 
 %\begin{figure}[ht!]
 %\end{figure}
 
 \section{Bugs and Limitations}
+Bugs:
+\begin{itemize}
+\item Apply button changes to down
+\item Logmar duplicate values appear in top left corner of medium chart
+\end{itemize}
 
 
 \chapter{Conclusion}
@@ -559,8 +604,37 @@ A disadvantage with this system is that digital screens become very expensive at
 
 \newpage
 \appendix
-\chapter{Appendix A} \label{App:AppendixA}
-\section{User 1}
+\chapter{Testing} \label{App:test}
+\section{Developer walkthrough}
+\begin{table}[ht!]
+\centering
+\begin{tabular}{l c c c r}
+Chart version		&	Large		&	Medium		&	Small		&	Distance	\\
+\hline\hline
+ETDRS 1				&		&		&		&		\\
+ETDRS 2				&		&		&		&		\\
+ETDRS R				&		&		&		&		\\
+ETDRS Random		&		&		&		&		\\
+\hline
+Tumbling E 1		&		&		&		&		\\
+Tumbling E Random	&		&		&		&		\\
+\hline
+HVOT 1				&		&		&		&		\\
+HVOT Random			&		&		&		&		\\
+\hline
+Icons 1				&		&		&		&		\\
+Icons Random		&		&		&		&		\\
+\hline\hline
+			&	Scanning	&	Connecting	& Reconnecting	& \\
+Connection	&	&	&	& \\
+\hline\hline
+\end{tabular}
+%\label{tab:test1_empty}
+\caption{\label{tab:test1_empty}}
+\end{table}
+
+
+\section{Usability test procedure}
 \begin{enumerate}\bfseries
 
 \item Start application
@@ -580,6 +654,12 @@ A disadvantage with this system is that digital screens become very expensive at
 \item Page through Icons 1 small chart with a distance of 1.5 meters
 
 \item Reconnect to server
+
+Best thing with GUI\\
+bra att meny är framme hela tiden
+
+Needs improvement\\
+click to connect not obvious
 
 \end{enumerate}
 \end{document}
