--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -513,14 +513,38 @@ DISTANCE
 \chapter{Results}
 \section{User Interface}
 \subsection{Android application}
-The finished Android application turned out as intended and uses Androids standard GUI elements. To navigate between the connection settings and different optotypes, Androids built in navigation drawer is used (fig. \ref{fig:app_nav_drawer}).
+The finished Android application turned out as intended and uses Androids standard GUI elements. To navigate between the connection settings and different type of charts, Androids built in navigation drawer is used (fig. \ref{fig:app_nav_drawer}). In order to connect to a server, the user must click the name of the connected server, in the case that no server is connected it will, instead of the name of a server, say \textit{Click to connect}.
 
 \begin{figure}[h]
 \centering
 \includegraphics[width=60mm]{images/appgui/nav_drawer.png}
-%\caption{Navigation drawer with, from top to bottom, the name of the application (\textit{Axanivis}), the currently connected server (\textit{Johansson-PC/192.168.0.12}), 4 different chart versions to choose between (\textit{ETDRS, Tumbling E, HVOT and Icons}). The \textit{Grating} setting is not yet implemented and \textit{Test} is used by the developers for testing new functions.}
 \caption{The Android application navigation drawer used for navigating the application. a) Name of the application b) The currently connected server c) Available optotypes d) Grating, not yet implemented e) Test, used for testing new functions}
 \label{fig:app_nav_drawer}
+\end{figure}
+
+\begin{figure}[h]
+\centering
+\begin{subfigure}{.5\textwidth}
+  \centering
+  %\includegraphics[width=.5\linewidth]{images/etdrs_top.png}
+  \includegraphics[width=50mm]{images/appgui/scan1.png}
+  \caption{Upper Chart}
+  \label{fig:scan1}
+\end{subfigure}%
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=50mm]{images/appgui/scan2.png}
+  \caption{Lower Chart}
+  \label{fig:scan2}
+\end{subfigure}
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=50mm]{images/appgui/scan3.png}
+  \caption{Lower Chart}
+  \label{fig:scan3}
+\end{subfigure}
+\caption{The upper and lower ETDRS charts}
+\label{fig:scan}
 \end{figure}
 
 
