--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -681,7 +681,7 @@ Bugs:
 
 \section{Discussion}
 
-\section{Advantages of a digital system}
+\subsection{Advantages of a digital system}
 The advantages of a digital system is the ability to change the layout, optotypes and size of the chart without having to carry away the old chart and then carrying back a new. This will save both time and space as only one screen and a small Android device is necessary. This system will also allow the visual acuity tests to take place in rooms that previously where too small, as the system will display optotypes at a size suitable for the distance the patient is from the monitor.
 
 \subsection{Disadvantages of a digital system}
