--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -587,7 +587,7 @@ The last setting the user can choose is the distance setting. Here the user can 
 \subsection{Server}
 \subsection{Network}
 
-\section{Test Results}
+\section{Tests}
 \subsection{Developer walkthrough}
 During the developer walkthrough of the system, all charts versions where found and all settings where usable on every chart by using table \ref{tab:test1}. The connection settings where also reachable from everywhere in the application and both connecting and reconnecting was working properly.
 
